--- a/6_object_litrerel.html
+++ b/6_object_litrerel.html
@@ -6,7 +6,7 @@
     <title>Object-literel</title>
 </head>
 <body>
-    <h1></h1>
+    <h1>This is object file</h1>
     <script src="6_object_litrerel.js"></script>
 </body>
 </html>
