--- a/DOM/DOM/3_keybord_even.html
+++ b/DOM/DOM/3_keybord_even.html
@@ -5,13 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Keybord_Event</title>
 </head>
-<body>
+<body style="text-align: center;margin-top: 16%;">
     <input placeholder="userName" />
     <button>submit</button>
     <form id="registrationForm" action="/action">
         <input placeholder="userName">
         <button>Register</button>
     </form>    
+    <button id="count">check count</button>
+    <button id = "restart">restart count</button>
     <script src="3_keybord_even.js"></script>
 </body>
 </html>
