--- a/DOM/DOM/5_tudo.html
+++ b/DOM/DOM/5_tudo.html
@@ -3,26 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>tudo</title>
-</head>
-<body>
-    <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>TODO</title>
 </head>
 <body>
     <h1>TODO LIST</h1>
-    <input type="text" placeholder="list"/>
-    <button>Add btn</button>
+    <input type="text" placeholder="add task"/>
+    <button>Add Task</button>
     <ul>
-        <li class="delete">sdngnfg <button class="delete">delete</button></li>
-        <li class="delete">faegf <button class="delete">delete</button></li>
+        <li>sdngnfg <button class="delete">delete</button></li>
+        <li>faegf <button class="delete">delete</button></li>
     </ul>    
     <script src="./5_tudo.js"></script>
-</body>
-</html>
 </body>
 </html>
