--- a/JSON/3_exmple.html
+++ b/JSON/3_exmple.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>exmple</title>
+    <title>University</title>
 </head>
 <body>
-    <h1>Get random cat facts</h1>
+    <h1>Get university</h1>
+    <input type="county" name="county" id="county">
     <button>Show new fact</button>
-    <p id="result"></p>
-    <h1>Get random dog image</h1>
-    <button class="img">Show new image</button>
-    <img id = ranImg>
-
+    <ul id="list"></ul>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
-    <script src="2_exmple.js"></script>
+    <script src="3_exmple.js"></script>
 </body>
 </html>
