--- a/7_function.html
+++ b/7_function.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>function</title>
-</head>
-<body>
-    <h1 style="color: goldenrod;">let's start to new step, learn about <span style="color:blue;">function</span></h1>
+  </head>
+  <body>
+    <h1 style="color: goldenrod">
+      let's start to new step, learn about
+      <span style="color: blue">function</span>
+    </h1>
     <script src="7_function.js"></script>
-</body>
+  </body>
 </html>
