--- a/8_scope.html
+++ b/8_scope.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>scope</title>
-</head>
-<body>
-    <h1 style="color: rgb(81, 81, 81);">let's study of scope!</h1>
-    <ol type="1" style="color: orange; font-size: 25px;">
-        <li>Funnction scope</li>
-        <li>Block scope</li>
-        <li>Lexical scope</li>
+  </head>
+  <body>
+    <h1 style="color: rgb(81, 81, 81)">let's study of scope!</h1>
+    <ol type="1" style="color: orange; font-size: 25px">
+      <li>Funnction scope</li>
+      <li>Block scope</li>
+      <li>Lexical scope</li>
     </ol>
     <script src="8_scope.js"></script>
-</body>
+  </body>
 </html>
