--- a/0_ques_quetions.html
+++ b/0_ques_quetions.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>all ques quetion in js</h1>
     <h2>content come in (youtube,instagram,etc)</h2>
     <script src="0_ques_quetions.js"></script>
-</body>
+  </body>
 </html>
