--- a/12_exmple.html
+++ b/12_exmple.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>part-7</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>assignment</h1>
     <script src="12_exmple.js"></script>
-</body>
+  </body>
 </html>
