--- a/4_todo_game.html
+++ b/4_todo_game.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>todo-game</title>
-</head>
-<body>
-    <head>lets play game &#128512</head>
+  </head>
+  <body>
+    <head>
+      lets play game &#128512;
+    </head>
     <h1>To do app</h1>
     <h3>Enter list to show all tasks</h3>
     <h3>Enter add to add all tasks</h3>
@@ -14,5 +16,5 @@
     <h3>Enter list to list all task</h3>
     <h3>Enter quit to quit</h3>
     <script src="4_todo_game.js"></script>
-</body>
+  </body>
 </html>
