--- a/6_object_litrerel.html
+++ b/6_object_litrerel.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Object-literel</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>This is object file</h1>
     <script src="6_object_litrerel.js"></script>
-</body>
+  </body>
 </html>
