--- a/9.func_expression.html
+++ b/9.func_expression.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>function part</title>
-</head>
-<body>
-    <h1><Label>Learn about <span style="color: blue;">function expression</span></Label></h1>
+  </head>
+  <body>
+    <h1>
+      <label
+        >Learn about <span style="color: blue">function expression</span></label
+      >
+    </h1>
     <script src="9.func_expression.js"></script>
-</body>
+  </body>
 </html>
