--- a/DOM/DOM/2_Dom_events.html
+++ b/DOM/DOM/2_Dom_events.html
@@ -1,30 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Dom-events</title>
-</head>
-<body>
+  </head>
+  <body>
     <button>On Click</button>
     <button>On Click2</button>
     <button>On Click3</button>
     <button>On Click4</button>
     <button>On Click5</button>
     <button>On Click6</button>
-    <button id = "abc">submit</button>
-    <button id = "xyz">lest check!</button>
-    <a href="https://developer.mozilla.org/en-US/docs/Web/Events" style="border: 3px solid black; font-size: 20px; color: red;">
-        please check <b style="color: blue;">MDN</b> side for events</a>
+    <button id="abc">submit</button>
+    <button id="xyz">lest check!</button>
+    <a
+      href="https://developer.mozilla.org/en-US/docs/Web/Events"
+      style="border: 3px solid black; font-size: 20px; color: red"
+    >
+      please check <b style="color: blue">MDN</b> side for events</a
+    >
     <!-- this set -->
     <div>
-        <button class="toggle-button">Toggle Section 1</button>
-        <section class="section" style="display: none;">Section 1 content</section>
+      <button class="toggle-button">Toggle Section 1</button>
+      <section class="section" style="display: none">Section 1 content</section>
 
-        <button class="toggle-button">Toggle Section 2</button>
-        <section class="section" style="display: none;">Section 2 content</section>
+      <button class="toggle-button">Toggle Section 2</button>
+      <section class="section" style="display: none">Section 2 content</section>
     </div>
 
     <script src="2_Dom_events.js"></script>
-</body>
+  </body>
 </html>
