--- a/DOM/DOM/3_activity.html
+++ b/DOM/DOM/3_activity.html
@@ -1,17 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>colore generater & give rgb value</title>
-    <link rel="stylesheet" href="3_activity.css"></link>
-</head>
-<body>
+    <link href="3_activity.css" rel="stylesheet" />
+  </head>
+  <body>
     <h3>generate a random colore</h3>
-<br>
+    <br />
     <button>generate start</button>
-<br>
+    <br />
     <div>This is your random color</div>
     <script src="3_activity.js"></script>
-</body>
+  </body>
 </html>
