--- a/DOM/DOM/4_Extracting_form_data.html
+++ b/DOM/DOM/4_Extracting_form_data.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Extracting_form_data</title>
-</head>
-<body>
+  </head>
+  <body>
     <form action="./actions">
-        <input type="text" placeholder="userName" id="user">
-        <input type="password" placeholder="password"  id="pass">
-        <button>Submit</button>
+      <input type="text" placeholder="userName" id="user" />
+      <input type="password" placeholder="password" id="pass" />
+      <button>Submit</button>
     </form>
     <script src="4_Extracting_form_data.js"></script>
-</body>
+  </body>
 </html>
