--- a/DOM/DOM/5_tudo.html
+++ b/DOM/DOM/5_tudo.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TODO</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>TODO LIST</h1>
-    <input type="text" placeholder="add task"/>
+    <input type="text" placeholder="add task" />
     <button>Add Task</button>
     <ul>
-        <li>sdngnfg <button class="delete">delete</button></li>
-        <li>faegf <button class="delete">delete</button></li>
-    </ul>    
+      <li>sdngnfg <button class="delete">delete</button></li>
+      <li>faegf <button class="delete">delete</button></li>
+    </ul>
     <script src="./5_tudo.js"></script>
-</body>
+  </body>
 </html>
