--- a/DOM/DOM/exmple2.html
+++ b/DOM/DOM/exmple2.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>quetion2</title>
-    <link href="exmple2.css" rel="stylesheet">
-</head>
-<body>
+    <link href="exmple2.css" rel="stylesheet" />
+  </head>
+  <body>
     <script src="exmple2.js"></script>
-</body>
+  </body>
 </html>
