--- a/JSON/1_firstreq.html
+++ b/JSON/1_firstreq.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>first request</title>
-    <link rel="stylesheet" href="1_firstreq.css">
-</head>
-<body>
+    <link rel="stylesheet" href="1_firstreq.css" />
+  </head>
+  <body>
     <h1>This is a my first request of API</h1>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="1_firstreq.js"></script>
-</body>
+  </body>
 </html>
