--- a/JSON/2_exmple.html
+++ b/JSON/2_exmple.html
@@ -1,19 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>exmple</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Get random cat facts</h1>
     <button>Show new fact</button>
     <p id="result"></p>
     <h1>Get random dog image</h1>
     <button class="img">Show new image</button>
-    <img id = ranImg>
+    <img id="ranImg" />
 
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="2_exmple.js"></script>
-</body>
+  </body>
 </html>
