--- a/JSON/3_exmple.html
+++ b/JSON/3_exmple.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>University</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Get university</h1>
-    <input type="county" name="county" id="county">
+    <input type="county" name="county" id="county" />
     <button>Show new fact</button>
     <ul id="list"></ul>
     <script src="https://cdn.jsdelivr.net/npm/axios@1.6.7/dist/axios.min.js"></script>
     <script src="3_exmple.js"></script>
-</body>
+  </body>
 </html>
