--- a/7_MISCELAANEOUS/Frontend/index.html
+++ b/7_MISCELAANEOUS/Frontend/index.html
@@ -1,26 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Get & post</title>
-</head>
-<body>
+  </head>
+  <body>
     <h3>Gat req</h3>
     <form method="get" action="http://localhost:8080/submit">
-        <input type="text" placeholder="username" name="user">
-        <input type="password" placeholder="password" name="pass">
-        <button>Submit</button>
+      <input type="text" placeholder="username" name="user" />
+      <input type="password" placeholder="password" name="pass" />
+      <button>Submit</button>
     </form>
-    <hr/>
+    <hr />
 
     <h3>Post req</h3>
     <form method="post" action="http://localhost:8080/submit">
-        <input type="text" placeholder="username" name="user">
-        <input type="password" placeholder="password" name="pass">
-        <button>Submit</button>
+      <input type="text" placeholder="username" name="user" />
+      <input type="password" placeholder="password" name="pass" />
+      <button>Submit</button>
     </form>
-    <hr/>
+    <hr />
     <script src="app.js"></script>
-</body>
+  </body>
 </html>
